Remove search from footer

--- a/_includes/the-erudite/footer.html
+++ b/_includes/the-erudite/footer.html
@@ -55,7 +55,7 @@
             </div><!-- #secondary .sidebar -->
             <div id="ternary" class="footer">
                 <ul class="xoxo">
-                    <li id="search">
+                    {% comment %}<li id="search">
                         <h3><label for="s">Haku</label></h3>
                         <form id="searchform" class="blog-search" method="get" action="http://www.kuudesmauste.fi">
                             <div>
@@ -64,6 +64,7 @@
                             </div>
                         </form>
                     </li>
+                    {% endcomment %}
                     <li class="linkcat">
                         <h3>Blogroll</h3>
                         <ul class='xoxo blogroll'>
